--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<img class="col-sm-4" src="ghqwebdevelopment.github.io/logo graphic only jpg.jpg" height="150px" width="150px">
 	</div>
 	<div class="row">
-	<h1 class ="col-sm-8 text-center">Global Headquarters Web Development>
+	<h1 class ="col-sm-8 text-center">Global Headquarters Web Development
 	</h1>
 	</div>
 	
