--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <title>Global Headquarters Web Development</title>
 <meta charset="utf-8"/>
 <link rel="stylesheet" type="text/css" href="main.css"/>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">/>
 </head>
 	<body>
 	<header class="container">
 	<div class="row"> 
-	<img class="col-sm-4" src="https://s3.ca-central-1.amazonaws.com/ghqimages/logo+graphic+only+jpg.jpg height="150px" width="150px">
+	<img class="col-sm-4" src="ghqwebdevelopment.github.io/logo graphic only jpg.jpg" height="150px" width="150px">
 	</div>
 	<div class="row">
-	<h1 class ="col-sm-8 text-center">Global Headquarters Web Development
+	<h1 class ="col-sm-8 text-center">Global Headquarters Web Development test test
 	</h1>
 	</div>
 	
