--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 	<header class="container">
 	<div class="row"> 
-	<img class="col-sm-4" src="ghqwebdevelopment.github.io/logo graphic only jpg.jpg" height="150px" width="150px">
+	<img src="https://s3-ap-southeast-1.amazonaws.com/ghq.images/logo+graphic+only+jpg.jpg" height="150px" width="150px">
 	</div>
 	<div class="row">
 	<h1 class ="col-sm-8 text-center">Global Headquarters Web Development test test
