--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <title>Global Headquarters Web Development</title>
 <meta charset="utf-8"/>
 <link rel="stylesheet" type="text/css" href="main.css"/>
-<link rel="stylesheet" href="<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">/>
+<link rel="stylesheet" href="<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 	<body>
 	<header class="container">
-	<div class="row"> 
-	<img src="https://s3-ap-southeast-1.amazonaws.com/ghq.images/logo+graphic+only+jpg.jpg" height="150px" width="150px">
+	<div class="row text-center"> 
+	<img src="https://s3-ap-southeast-1.amazonaws.com/ghq.images/logo+graphic+only+jpg.jpg" height="300px" width="300px">
 	</div>
-	<div class="row">
-	<h1 class ="col-sm-8 text-center">Global Headquarters Web Development test test
+	<div class="row text-center">
+	<h1>Global Headquarters Web Development
 	</h1>
 	</div>
 	
